state persister and session timeout

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta content="" name="description" />
   <meta content="webthemez" name="author" />
-  <title>BRILLIANT Free Bootstrap Admin Template - WebThemez</title>
+  <title>Mer-hacker</title>
 
   <!-- Material Icons -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -25,7 +25,7 @@
   <!-- Google Fonts-->
   <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="assets/js/Lightweight-Chart/cssCharts.css" />
-  <title>Meraki-py_react</title>
+  <title>Mer-hacker</title>
 </head>
 
 <body>
