--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
   <script src="assets/js/custom-scripts.js"></script>
 
   <!-- Chart Js -->
-  <script type="text/javascript" src="assets/js/Chart.min.js"></script>
+  <!-- <script type="text/javascript" src="assets/js/Chart.min.js"></script> -->
 
   <!-- Bootstrap Input Validator -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
