created switchport templates tool

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,10 @@
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
   <div id="root"></div>
 
+
+
+
+
   <!-- JS Scripts-->
   <!-- jQuery Js -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -40,9 +44,14 @@
   <script src="assets/js/jquery-1.10.2.js"></script>
 
   <!-- Popper -->
+  <!-- <script src="assets/js/popper.min.js"></script> -->
 
   <!-- Bootstrap Js -->
+
   <script src="assets/js/bootstrap.min.js"></script>
+
+  <!-- bootstrap-confirmation-->
+  <!-- <script src="assets/js/bootstrap-confirmation.js"></script> -->
 
   <!-- FontAwesome -->
   <script src="https://use.fontawesome.com/16d141d831.js"></script>
