--- a/public/index.html
+++ b/public/index.html
@@ -1,88 +1,91 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta content="" name="description" />
+    <meta content="webthemez" name="author" />
+    <title>Mer-hacker</title>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta content="" name="description" />
-  <meta content="webthemez" name="author" />
-  <title>Mer-hacker</title>
+    <!-- Material Icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <!-- Bootstrap Styles-->
+    <link href="assets/css/bootstrap.css" rel="stylesheet" />
 
-  <!-- Material Icons -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <!-- Bootstrap Styles-->
-  <link href="assets/css/bootstrap.css" rel="stylesheet" />
+    <!-- FontAwesome Styles-->
+    <link href="assets/css/font-awesome.css" rel="stylesheet" />
+    <link href="assets/css/select2.min.css" rel="stylesheet" />
+    <link href="assets/css/checkbox3.min.css" rel="stylesheet" />
+    <!-- Morris Chart Styles-->
+    <link href="assets/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
 
-  <!-- FontAwesome Styles-->
-  <link href="assets/css/font-awesome.css" rel="stylesheet" />
-  <link href="assets/css/select2.min.css" rel="stylesheet" />
-  <link href="assets/css/checkbox3.min.css" rel="stylesheet" />
-  <!-- Morris Chart Styles-->
-  <link href="assets/js/morris/morris-0.4.3.min.css" rel="stylesheet" />
+    <!-- Custom Styles-->
+    <link href="assets/css/custom-styles.css" rel="stylesheet" />
 
-  <!-- Custom Styles-->
-  <link href="assets/css/custom-styles.css" rel="stylesheet" />
+    <!-- Google Fonts-->
+    <link
+      href="http://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="assets/js/Lightweight-Chart/cssCharts.css" />
+    <title>Mer-hacker</title>
+  </head>
 
-  <!-- Google Fonts-->
-  <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css" />
-  <link rel="stylesheet" href="assets/js/Lightweight-Chart/cssCharts.css" />
-  <title>Mer-hacker</title>
-</head>
+  <body>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <div id="root"></div>
 
-<body>
-  <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-  <div id="root"></div>
+    <!-- JS Scripts-->
+    <!-- jQuery Js -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="assets/js/jquery-1.10.2.js"></script>
 
+    <!-- Popper -->
+    <!-- <script src="assets/js/popper.min.js"></script> -->
 
+    <!-- Bootstrap Js -->
 
+    <script src="assets/js/bootstrap.min.js"></script>
 
+    <!-- bootstrap-confirmation-->
+    <!-- <script src="assets/js/bootstrap-confirmation.js"></script> -->
 
-  <!-- JS Scripts-->
-  <!-- jQuery Js -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="assets/js/jquery-1.10.2.js"></script>
+    <!-- FontAwesome -->
+    <script src="https://use.fontawesome.com/16d141d831.js"></script>
 
-  <!-- Popper -->
-  <!-- <script src="assets/js/popper.min.js"></script> -->
+    <!-- Morris Chart Js -->
+    <script src="assets/js/morris/raphael-2.1.0.min.js"></script>
+    <script src="assets/js/morris/morris.js"></script>
 
-  <!-- Bootstrap Js -->
+    <script src="assets/js/easypiechart.js"></script>
+    <script src="assets/js/easypiechart-data.js"></script>
 
-  <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/Lightweight-Chart/jquery.chart.js"></script>
 
-  <!-- bootstrap-confirmation-->
-  <!-- <script src="assets/js/bootstrap-confirmation.js"></script> -->
+    <!-- Custom Js -->
+    <script src="assets/js/custom-scripts.js"></script>
 
-  <!-- FontAwesome -->
-  <script src="https://use.fontawesome.com/16d141d831.js"></script>
+    <!-- Chart Js -->
+    <!-- <script type="text/javascript" src="assets/js/Chart.min.js"></script> -->
 
-  <!-- Morris Chart Js -->
-  <script src="assets/js/morris/raphael-2.1.0.min.js"></script>
-  <script src="assets/js/morris/morris.js"></script>
+    <!-- Bootstrap Input Validator -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
 
-  <script src="assets/js/easypiechart.js"></script>
-  <script src="assets/js/easypiechart-data.js"></script>
-
-  <script src="assets/js/Lightweight-Chart/jquery.chart.js"></script>
-
-  <!-- Custom Js -->
-  <script src="assets/js/custom-scripts.js"></script>
-
-  <!-- Chart Js -->
-  <!-- <script type="text/javascript" src="assets/js/Chart.min.js"></script> -->
-
-  <!-- Bootstrap Input Validator -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
-
-  <!-- Metis Menu Js -->
-  <script src="assets/js/jquery.metisMenu.js"></script>
-  <script src="assets/js/select2.full.min.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function () {
-      $(".selectbox").select2();
-    });
-  </script>
-
-</body>
-
+    <!-- Metis Menu Js -->
+    <script src="assets/js/jquery.metisMenu.js"></script>
+    <script src="assets/js/select2.full.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $(".selectbox").select2();
+      });
+    </script>
+  </body>
 </html>
