--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon"/>
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" href="./avatar.png" type="image/x-icon"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./avatar.png" />
     <title>Mer-hacker</title>
 
 
